--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,12 @@
     "dev": "nodemon --exec \"node --loader ts-node/esm\" src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "serve-archive": "node --loader ts-node/esm src/utils/serveArchive.ts",
+    "test:visual": "jest --testPathPattern=visual",
+    "test-website": "node --loader ts-node/esm src/utils/testAnyWebsite.ts"
   },
   "keywords": [
     
@@ -16,6 +21,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cheerio": "^0.22.35",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -24,8 +31,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
+    "jest": "^30.1.1",
     "nodemon": "^3.1.10",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
